# shopify-csv-preflight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  csv_import_story.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: shopify-product-csv-rules.md
examples/inputs/: README.md  messy-product-import-sample.csv  shopify-product-import-sample.csv
examples/reports/: csv-preflight-clean-report.md  csv-preflight-messy-errors.csv  csv-preflight-messy-report.md  preflight-kit-clean-report.md  preflight-kit-messy-report.md
src/csv_preflight/: cli.py  fixer.py  models.py
src/csv_preflight/rules/: file_rules.py  row_rules.py
src/preflight_kit/: cli.py  engine.py  header_registry.py  json_dump.py  loader.py  reporters.py
src/preflight_kit/rules/: __init__.py
tests/: conftest.py  test_cli.py  test_e2e_sample.py  test_engine.py  test_file_rules.py  test_fixer.py  test_golden.py  test_header_registry.py  test_loader.py  test_models.py  test_reporters.py  test_row_rules.py
tests/fixtures/alt_without_image/: input.csv
tests/fixtures/bad_price/: input.csv
tests/fixtures/blank_sku/: input.csv
tests/fixtures/bom_utf8/: input.csv
tests/fixtures/case_only_header/: input.csv
tests/fixtures/clean_legacy_alias/: input.csv
tests/fixtures/clean_new_format/: input.csv
tests/fixtures/control_char/: input.csv
tests/fixtures/dup_option_combo/: input.csv
tests/fixtures/dup_product_start/: input.csv
tests/fixtures/handle_missing_update/: input.csv
tests/fixtures/image_rows_normal/: input.csv
tests/fixtures/invalid_inventory_policy/: input.csv
tests/fixtures/local_image_path/: input.csv
tests/fixtures/missing_fulfillment/: input.csv
tests/fixtures/missing_handle_column/: input.csv
tests/fixtures/multivariant_normal/: input.csv
tests/fixtures/non_utf8/: input.csv
tests/fixtures/option2_without_option1/: input.csv
tests/fixtures/option_dependency/: input.csv
tests/fixtures/sku_reuse/: input.csv
tests/fixtures/sku_scientific/: input.csv
tests/fixtures/smart_quotes/: input.csv
tests/fixtures/title_missing_new/: input.csv
tests/fixtures/tracker_no_qty/: input.csv
tests/fixtures/unknown_metafield/: input.csv
tests/fixtures/variant_metafield/: input.csv
tests/fixtures/variant_missing_handle/: input.csv
