[project]
name = "csv-preflight"
version = "0.1.0"
description = "Preflight validator for Shopify product CSV"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Source-Available" }
license-files = ["LICENSE"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
csv-preflight = "csv_preflight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_preflight"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
