[project]
name = "csv-preflight"
version = "0.1.0"
description = "Preflight validator for Shopify product CSV — catches import-breaking mistakes before you upload"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Source-Available" }
license-files = ["LICENSE"]
authors = [{ name = "q00tar00" }]
keywords = ["shopify", "csv", "validator", "preflight", "product-import", "ecommerce"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://shopify-7mc.pages.dev/"
Repository = "https://github.com/q00tar00/shopify-csv-preflight"
Issues = "https://github.com/q00tar00/shopify-csv-preflight/issues"
Changelog = "https://github.com/q00tar00/shopify-csv-preflight/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
csv-preflight = "csv_preflight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_preflight"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
